Noget testeeeeeeeeeeeeed med Ebbe

--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -549,6 +549,7 @@
                            Margin="0,0,5,0" />
                 <TextBox Margin="0,0,5,0"
                          Text="{Binding SearchForUserString, Mode=TwoWay}"
+                         KeyUp="UIElement_OnKeyUp"
                          MinWidth="200" />
             </StackPanel>
             <ListView Grid.Row="3"
