--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -580,13 +580,14 @@
                 <TextBlock Text="Søg :"
                            Margin="0,0,5,0" />
                 <TextBox Margin="0,0,5,0"
-                         Text="{Binding SearchForDoohickeyString, Mode=TwoWay}"
-                         MinWidth="200" />
+                         MinWidth="200" 
+                         KeyUp="SearchForDoohickeysByLetter"
+                         LostFocus="EmptySearchString"/>
             </StackPanel>
             <ListView Grid.Row="8"
                       Grid.Column="1"
                       Grid.RowSpan="2"
-                      ItemsSource="{Binding DoohickeyList}"
+                      ItemsSource="{Binding MC.SearchDoohickeys}"
                       Margin="10">
                 <ListView.DataContext>
                     <viewModel:BrowseViewModel />
