--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -247,7 +247,7 @@
                     </PivotItem>
                     <PivotItem Header="Dimser">
                         <StackPanel>
-                            <ListView ItemsSource="{Binding UserL, Mode=TwoWay}"
+                            <ListView ItemsSource="{Binding DoohickeyList, Mode=TwoWay}"
                                       Height="500"
                                       Width="500"
                                       HorizontalAlignment="Left">
@@ -258,18 +258,12 @@
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition />
                                                     <RowDefinition />
-                                                    <RowDefinition />
                                                 </Grid.RowDefinitions>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBlock Text="{Binding FirstName}"
+                                                    <TextBlock Text="{Binding Name}"
                                                                Margin="10,10,2,5" />
-                                                    <TextBlock Text="{Binding LastName}"
-                                                               Margin="0,10,10,5" />
                                                 </StackPanel>
-                                                <TextBlock Text="{Binding Email}"
-                                                           Margin="10,5,10,5"
-                                                           Grid.Row="1" />
-                                                <MenuFlyoutSeparator Grid.Row="2" />
+                                                <MenuFlyoutSeparator Grid.Row="1" />
                                             </Grid>
                                         </StackPanel>
                                     </DataTemplate>
@@ -595,9 +589,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding FirstName}"
-                                       Margin="0,0,5,10" />
-                            <TextBlock Text="{Binding LastName}"
+                            <TextBlock Text="{Binding Name}"
                                        Margin="0,0,5,10" />
                         </StackPanel>
                     </DataTemplate>
