--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -206,6 +206,21 @@
                                                 <MenuFlyoutSeparator Grid.Row="2"
                                                                      Grid.Column="0"
                                                                      Grid.ColumnSpan="2" />
+                                                <ListView Grid.Column="1"
+                                                          Grid.Row="0"
+                                                          Grid.RowSpan="2"
+                                                          ItemsSource="{Binding ProjectMembers}">
+                                                    <ListView.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <StackPanel Orientation="Horizontal">
+                                                                <TextBlock Text="{Binding FirstName}"
+                                                                           Margin="10,5,5,5"/>
+                                                                <TextBlock Text="{Binding LastName}"
+                                                                           Margin="0,5,10,5"/>
+                                                            </StackPanel>
+                                                        </DataTemplate>
+                                                    </ListView.ItemTemplate>
+                                                </ListView>
                                             </Grid>
                                         </StackPanel>
                                     </DataTemplate>
@@ -217,7 +232,6 @@
                         <StackPanel>
                             <ListView ItemsSource="{Binding UserList, Mode=TwoWay}"
                                       Height="500"
-                                      Width="500"
                                       HorizontalAlignment="Left">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -228,7 +242,8 @@
                                                     <RowDefinition />
                                                     <RowDefinition />
                                                 </Grid.RowDefinitions>
-                                                <StackPanel Orientation="Horizontal">
+                                                <StackPanel Orientation="Horizontal"
+                                                            Width="500">
                                                     <TextBlock Text="{Binding FirstName}"
                                                                Margin="10,10,2,5" />
                                                     <TextBlock Text="{Binding LastName}"
@@ -249,7 +264,6 @@
                         <StackPanel>
                             <ListView ItemsSource="{Binding DoohickeyList, Mode=TwoWay}"
                                       Height="500"
-                                      Width="500"
                                       HorizontalAlignment="Left">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -259,7 +273,8 @@
                                                     <RowDefinition />
                                                     <RowDefinition />
                                                 </Grid.RowDefinitions>
-                                                <StackPanel Orientation="Horizontal">
+                                                <StackPanel Orientation="Horizontal"
+                                                            Width="500">
                                                     <TextBlock Text="{Binding Name}"
                                                                Margin="10,10,2,5" />
                                                 </StackPanel>
@@ -299,7 +314,6 @@
                        FontSize="18" />
             <ListView ItemsSource="{Binding MyProjects}"
                       Height="500"
-                      Width="500"
                       HorizontalAlignment="Left"
                       VerticalAlignment="Top"
                       Grid.Row="1"
@@ -314,10 +328,11 @@
                                 <RowDefinition />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition />
+                                <ColumnDefinition Width="350"/>
+                                <ColumnDefinition Width="50"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="{Binding Name}"
+                                       FontWeight="Bold"
                                        Margin="10,10,10,5"
                                        Grid.Row="0"
                                        Grid.Column="0" />
@@ -328,7 +343,8 @@
                                        TextWrapping="Wrap" />
                             <TextBlock Text="{Binding ProjectEndDate}"
                                        Grid.Column="0"
-                                       Grid.Row="2" />
+                                       Grid.Row="2" 
+                                       Margin="10,5,10,5"/>
                             <MenuFlyoutSeparator Grid.Row="3"
                                                  Grid.Column="0"
                                                  Grid.ColumnSpan="2" />
@@ -446,7 +462,7 @@
                        VerticalAlignment="Top"
                        FontSize="18"
                        Grid.Column="0"
-                       Grid.Row="0"/>
+                       Grid.Row="0" />
 
         </Grid>
         <!--#endregion-->
@@ -574,9 +590,9 @@
                 <TextBlock Text="Søg :"
                            Margin="0,0,5,0" />
                 <TextBox Margin="0,0,5,0"
-                         MinWidth="200" 
+                         MinWidth="200"
                          KeyUp="SearchForDoohickeysByLetter"
-                         LostFocus="EmptySearchString"/>
+                         LostFocus="EmptySearchString" />
             </StackPanel>
             <ListView Grid.Row="8"
                       Grid.Column="1"
