--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -482,7 +482,8 @@
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -557,7 +558,7 @@
                        Margin="10"
                        FontWeight="Bold" />
             <ListView Grid.Row="11"
-                      Grid.RowSpan="2"
+                      Grid.RowSpan="3"
                       Grid.Column="0"
                       Margin="10"
                       ItemsSource="{Binding MC.CurrentProject.BorrowedItems}">
@@ -574,7 +575,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Grid.Row="13"
+            <Button Grid.Row="14"
                     Grid.Column="0"
                     Margin="10"
                     Content="Afslut Projekt"
@@ -621,7 +622,7 @@
                        Text="Tilføj dims: "
                        FontWeight="Bold" />
             <StackPanel Orientation="Horizontal"
-                        Grid.Row="7"
+                        Grid.Row="11"
                         Grid.Column="1"
                         Margin="10">
                 <TextBlock Text="Søg :"
@@ -631,7 +632,7 @@
                          KeyUp="SearchForDoohickeysByLetter"
                          LostFocus="EmptySearchString" />
             </StackPanel>
-            <ListView Grid.Row="11"
+            <ListView Grid.Row="12"
                       Grid.Column="1"
                       Grid.RowSpan="2"
                       ItemsSource="{Binding MC.SearchDoohickeys}"
@@ -652,7 +653,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Grid.Row="13"
+            <Button Grid.Row="14"
                     Grid.Column="1"
                     Margin="10"
                     Content="Save"
