--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -496,7 +496,6 @@
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
-                <RowDefinition />
             </Grid.RowDefinitions>
             <TextBlock Text="{Binding MC.CurrentProject.Name}"
                        Grid.Row="0"
@@ -507,21 +506,18 @@
             <TextBlock Text="Beskrivelse:"
                        Grid.Row="1"
                        Grid.Column="0"
-                       Grid.ColumnSpan="2"
-                       Margin="10"
+                       Margin="10,5,5,0"
                        FontWeight="Bold" />
             <TextBox Text="{Binding MC.CurrentProject.Description, Mode=TwoWay}"
                      Grid.Row="2"
-                     Grid.RowSpan="3"
+                     Grid.RowSpan="2"
                      Grid.Column="0"
-                     Grid.ColumnSpan="2"
-                     Margin="10"
+                     Margin="10,5,5,0"
                      TextWrapping="Wrap" />
             <StackPanel Orientation="Horizontal"
-                        Grid.Row="5"
+                        Grid.Row="4"
                         Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        Margin="10">
+                        Margin="10,5,5,0">
                 <TextBlock Text="Startdato: "
                            Margin="0,0,5,0" />
                 <TextBlock Text="{Binding MC.CurrentProject.ProjectBeginDate}"
@@ -532,14 +528,14 @@
                            Margin="0,0,5,0" />
             </StackPanel>
             <TextBlock Text="Deltagere:"
-                       Grid.Row="6"
+                       Grid.Row="5"
                        Grid.Column="0"
-                       Margin="10"
+                       Margin="10,5,5,0"
                        FontWeight="Bold" />
-            <ListView Grid.Row="7"
+            <ListView Grid.Row="6"
                       Grid.RowSpan="3"
                       Grid.Column="0"
-                      Margin="10"
+                      Margin="10,5,5,0"
                       ItemsSource="{Binding MC.CurrentProject.ProjectMembers}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -553,14 +549,14 @@
                 </ListView.ItemTemplate>
             </ListView>
             <TextBlock Text="Lånte Dimser:"
-                       Grid.Row="10"
+                       Grid.Row="9"
                        Grid.Column="0"
-                       Margin="10"
+                       Margin="10,5,5,0"
                        FontWeight="Bold" />
-            <ListView Grid.Row="11"
+            <ListView Grid.Row="10"
                       Grid.RowSpan="3"
                       Grid.Column="0"
-                      Margin="10"
+                      Margin="10,5,5,0"
                       ItemsSource="{Binding MC.CurrentProject.BorrowedItems}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -575,32 +571,37 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Grid.Row="14"
-                    Grid.Column="0"
-                    Margin="10"
-                    Content="Afslut Projekt"
+            <StackPanel Orientation="Horizontal"
+                        Grid.Row="13"
+                        Grid.Column="0">
+                <Button Margin="10,5,5,0"
+                        Content="Afslut Projekt"
                     Command="{Binding EndProjectCommand}" />
-            <TextBlock Grid.Row="6"
+                <Button Margin="10,5,5,0"
+                        Content="Save"
+                    Command="{Binding SaveEditingCommand}" />
+            </StackPanel>
+            <TextBlock Grid.Row="1"
                        Grid.Column="1"
-                       Margin="10"
+                       Margin="10,5,5,0"
                        Text="Tilføj brugere: "
                        FontWeight="Bold" />
             <StackPanel Orientation="Horizontal"
-                        Grid.Row="7"
+                        Grid.Row="2"
                         Grid.Column="1"
-                        Margin="10">
+                        Margin="10,5,5,0">
                 <TextBlock Text="Søg :"
                            Margin="0,0,5,0" />
-                <TextBox Margin="0,0,5,0"
+                <TextBox Margin="0,0,5,10"
                          KeyUp="SearchForUsersForEveryLetterTyped"
                          LostFocus="EmptySearchString"
                          MinWidth="200" />
             </StackPanel>
-            <ListView Grid.Row="8"
+            <ListView Grid.Row="3"
                       Grid.Column="1"
-                      Grid.RowSpan="2"
+                      Grid.RowSpan="4"
                       ItemsSource="{Binding MC.SearchUsers}"
-                      Margin="10">
+                      Margin="10,5,5,0">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -616,27 +617,27 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <TextBlock Grid.Row="10"
+            <TextBlock Grid.Row="7"
                        Grid.Column="1"
-                       Margin="10"
+                       Margin="10,5,5,0"
                        Text="Tilføj dims: "
                        FontWeight="Bold" />
             <StackPanel Orientation="Horizontal"
-                        Grid.Row="11"
+                        Grid.Row="8"
                         Grid.Column="1"
-                        Margin="10">
+                        Margin="10,5,5,0">
                 <TextBlock Text="Søg :"
                            Margin="0,0,5,0" />
-                <TextBox Margin="0,0,5,0"
+                <TextBox Margin="0,0,5,10"
                          MinWidth="200"
                          KeyUp="SearchForDoohickeysByLetter"
                          LostFocus="EmptySearchString" />
             </StackPanel>
-            <ListView Grid.Row="12"
+            <ListView Grid.Row="9"
                       Grid.Column="1"
-                      Grid.RowSpan="2"
+                      Grid.RowSpan="4"
                       ItemsSource="{Binding MC.SearchDoohickeys, Mode=TwoWay}"
-                      Margin="10">
+                      Margin="10,5,5,0">
                 <ListView.DataContext>
                     <viewModel:BrowseViewModel />
                 </ListView.DataContext>
@@ -653,11 +654,6 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Grid.Row="14"
-                    Grid.Column="1"
-                    Margin="10"
-                    Content="Save"
-                    Command="{Binding SaveEditingCommand}" />
         </Grid>
         <!--#endregion-->
     </Grid>
