--- a/DimseLab-Aflevering/LoginView.xaml
+++ b/DimseLab-Aflevering/LoginView.xaml
@@ -1,16 +1,15 @@
-﻿<Page
-    x:Class="DimseLab_Aflevering.LoginView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DimseLab_Aflevering"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModel="using:DimseLab_Aflevering.ViewModel"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-<Page.DataContext>
-    <viewModel:LoginViewModel/>
-</Page.DataContext>
+﻿<Page x:Class="DimseLab_Aflevering.LoginView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:DimseLab_Aflevering"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:viewModel="using:DimseLab_Aflevering.ViewModel"
+      mc:Ignorable="d"
+      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.DataContext>
+        <viewModel:LoginViewModel />
+    </Page.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
@@ -37,7 +36,7 @@
                        Grid.Row="0"
                        Grid.ColumnSpan="6"
                        Fill="Gray" />
-            
+
 
             <Rectangle Grid.Column="1"
                        Grid.Row="1"
@@ -52,6 +51,186 @@
         </Grid>
         <!--#endregion-->
 
+        <!--#region CreateLogin-->
+        <Grid Grid.Row="1"
+              Visibility="{Binding CreateLoginVisibility}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal"
+                        Margin="20"
+                        HorizontalAlignment="Center"
+                        Grid.Row="0">
+                <Button Content="Use existing login / Create login"
+                        Command="{Binding ShiftVisibilityCommand}" />
+            </StackPanel>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MinWidth="200" />
+                    <ColumnDefinition MinWidth="200" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0"
+                           Grid.Row="0"
+                           Grid.ColumnSpan="2"
+                           Text="Create Login"
+                           FontWeight="Bold"
+                           FontSize="20"
+                           HorizontalAlignment="Center"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="1"
+                           Text="Fornavn:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="2"
+                           Text="Efternavn:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="3"
+                           Text="E-mail:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="4"
+                           Text="Tlf.-nummer:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="5"
+                           Text="Password:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="6"
+                           Text="Gentag password:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBox Grid.Column="1"
+                         Grid.Row="1"
+                         Text="{Binding FirstName, Mode=TwoWay}"
+                         HorizontalAlignment="Left"
+                         Width="170"
+                         Margin="0,10,5,0" />
+                <TextBox Grid.Column="1"
+                         Grid.Row="2"
+                         Text="{Binding LastName, Mode=TwoWay}"
+                         HorizontalAlignment="Left"
+                         Width="170"
+                         Margin="0,10,5,0" />
+                <TextBox Grid.Column="1"
+                         Grid.Row="3"
+                         Text="{Binding Email, Mode=TwoWay}"
+                         HorizontalAlignment="Left"
+                         Width="170"
+                         Margin="0,10,5,0" />
+                <TextBox Grid.Column="1"
+                         Grid.Row="4"
+                         Text="{Binding PhoneNumber, Mode=TwoWay}"
+                         HorizontalAlignment="Left"
+                         Width="170"
+                         Margin="0,10,5,0" />
+                <PasswordBox Grid.Column="1"
+                             Grid.Row="5"
+                             Password="{Binding PassWord, Mode=TwoWay}"
+                             HorizontalAlignment="Left"
+                             Width="170"
+                             Margin="0,10,5,0" />
+                <PasswordBox Grid.Column="1"
+                             Grid.Row="6"
+                             Password="{Binding PassWordCheck, Mode=TwoWay}"
+                             HorizontalAlignment="Left"
+                             Width="170"
+                             Margin="0,10,5,0" />
+                <Button Grid.Column="0"
+                        Grid.Row="7"
+                        Grid.ColumnSpan="2"
+                        Content="Create login"
+                        Command="{Binding CreateLoginCommand}"
+                        HorizontalAlignment="Center"
+                        Margin="0,10,5,0" />
+            </Grid>
+        </Grid>
 
+        <!--#endregion-->
+
+        <!--#region LoginWithExistingLogin-->
+        <Grid Grid.Row="1"
+              Visibility="{Binding LoginVisibility}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal"
+                        Margin="20"
+                        HorizontalAlignment="Center"
+                        Grid.Row="0">
+                <Button Content="Use existing login / Create login"
+                        Command="{Binding ShiftVisibilityCommand}" />
+            </StackPanel>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MinWidth="200" />
+                    <ColumnDefinition MinWidth="200" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="75"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Column="0"
+                           Grid.Row="0"
+                           Grid.ColumnSpan="2"
+                           Text="Login"
+                           FontWeight="Bold"
+                           FontSize="20"
+                           HorizontalAlignment="Center"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="1"
+                           Text="E-mail:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBlock Grid.Column="0"
+                           Grid.Row="2"
+                           Text="Password:"
+                           HorizontalAlignment="Right"
+                           Margin="0,10,5,0" />
+                <TextBox Grid.Column="1"
+                         Grid.Row="1"
+                         Text="{Binding Email, Mode=TwoWay}"
+                         HorizontalAlignment="Left"
+                         Width="170"
+                         Margin="0,10,5,0" />
+                <PasswordBox Grid.Column="1"
+                             Grid.Row="2"
+                             Password="{Binding PassWord, Mode=TwoWay}"
+                             HorizontalAlignment="Left"
+                             Width="170"
+                             Margin="0,10,5,0" />
+                <Button Grid.Column="0"
+                        Grid.Row="3"
+                        Grid.ColumnSpan="2"
+                        Content="Login"
+                        Command="{Binding LoginCommand}"
+                        HorizontalAlignment="Center"
+                        Margin="0,10,5,0" />
+            </Grid>
+        </Grid>
+
+        <!--#endregion-->
     </Grid>
 </Page>
