--- a/DimseLab-Aflevering/MainPage.xaml
+++ b/DimseLab-Aflevering/MainPage.xaml
@@ -440,6 +440,8 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="50"/>
                 <RowDefinition/>
+                <RowDefinition/>
+
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -456,7 +458,16 @@
                     Grid.Row="0"
                     Content="Log ud"
                     HorizontalAlignment="Right"
+                    Margin="10"
                     Command="{Binding LogOutCommand}"/>
+            <StackPanel Orientation="Horizontal"
+                        Grid.Column="0"
+                        Grid.Row="1">
+                <TextBlock Text="{Binding MC.CurrentUser.FirstName}"
+                           Margin="10,5,5,5"/>
+                <TextBlock Text="{Binding MC.CurrentUser.LastName}"
+                           Margin="0,5,5,5"/>
+            </StackPanel>
         </Grid>
         <!--#endregion-->
 
